deny-all-traffic-from-selectedpod-to-application.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: appa-deny-policy
spec:
  ingress: []
  podSelector:
    matchLabels:
      app: AppA
  policyTypes:
  - Ingress
