policy-blockping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-appa-to-appb
  namespace: tools
spec:
  podSelector:
    matchLabels:
      app: AppB
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
          - {key: app, operator: NotIn, values: ["AppA"]}
